# multi-cloud-agent

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/agents/: azure_agent.py  vertex_agent.py
src/config/: settings.py
src/models/: responses.py
src/tools/: azure_tools.py  vertex_tools.py
src/utils/: logging.py
